# bpaml-prime-minister

./: .flaskenv  BUILDING.md  README.md  pyproject.toml  requirements.txt  setup.py  tasks.txt
prime_minister/: __init__.py  data.sql
prime_minister/templates/: list_person.html  view_person.html
